<resources>
    <string name="app_name">apz-medsystem</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email_hint">Enter your email</string>
    <string name="medsystem">Medsystem</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="home_welcome">Welcome User</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="patients">Patients</string>
    <string name="current_patient">Current Patient</string>
    <string name="profile">Profile</string>
    <string name="unknown">Unknown</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="delivery_reason">Delivery Reason</string>
    <string name="patient">Patient</string>
    <string name="ward_number">Ward number</string>
    <string name="temperature">Temperature</string>
    <string name="pulse">Pulse</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="log_out">Log out</string>
    <string name="name">Name</string>
    <string name="take_patient">Take Patient</string>
    <string name="leave_patient">Finish treatment</string>
    <string name="language">Language</string>
</resources>